@@ -1,5 +1,9 @@
-version 1.0a1
+2005-12-20:
+-----------
+* Add Protocol.do_one_event and Protocol.do_pending.
 
+2002-05-03:
+-----------
 General Changes
 * Merging CamlTk and LablTk API interfaces
 * Activate and Deactivate Events are added
